# ComfyUI-RAWpy

./: .gitignore  README.md  __init__.py  agents.md  nodes.py  pyproject.toml  raw_processing.py  roadmap.md  run_tests.py  thumbnail_extraction.py
example_workflows/: basic_raw_load.json  rawpy.json
locales/en/: nodeDefs.json
sample_files/: 20260120_DSC01043.ARW.example
tests/: conftest.py
tests/fixtures/: README.md
tests/integration/: test_real_workflow.py  test_server.py  test_server_startup.py
tests/unit/: test_nodes.py  test_raw_processing.py  test_syntax.py  test_thumbnail_extraction.py
web/docs/: Load Raw Image.md
web/js/: rawpy_extension.js
